--- a/test_project/projects/templates/projects/single-project.html
+++ b/test_project/projects/templates/projects/single-project.html
@@ -1,5 +1,10 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<h5>Single Project Template</h5>
+<hr>
+<h1>Single Project Template</h1>
+
+<h2>{{ project.title }}</h2>
+<p>{{ project.description }}</p>
+
 {% endblock content %}
