Querying Database through Python Shell | Accessing database through template  | Added Content - chapter-3.md - Database Relationships and Querying

--- a/test_project/projects/templates/projects/projects.html
+++ b/test_project/projects/templates/projects/projects.html
@@ -5,21 +5,24 @@
 <hr>
 
 <h5>Projects Template</h5>
-{{ msg }}
-
-{% if number > 10  %}
-    <p>Number is greater than 10.</p>
-{% elif number == 10 %}
-    <p>Number equals 10.</p>
-{% else %}
-    <p>Number is less than 10.</p>
-{% endif %}
 
 <hr>
 
 <ul>
+    <table>
+        <tr>
+            <th>Project Title</th>
+            <th>Date Created</th>
+        </tr>
+        {% for project in projects %}
+        <tr>
+            <td><a href={% url 'project' project.id %}>{{ project.title }}</a></td>
+            <td>{{ project.created }}</td>
+            {# In the line above we are saying that this is a link to /project and a specified project id. #}
+        </tr>
+        {% endfor %}
+    </table>
     {% for project in projects %}
-        <li>Project Title: <a href={% url 'project' project.id %}>{{ project.title }}</a> - {{ project.description }}</li>
         {# In the line above we are saying that this is a link to /project and a specified project id. #}
     {% endfor %}
 </ul>
