Added Content - chapter4.md - CRUD and Model Forms | Forms implemented in Backend - Database not linked yet

--- a/test_project/templates/navbar.html
+++ b/test_project/templates/navbar.html
@@ -3,15 +3,8 @@
 <!-- Header Section -->
 <header class="header">
     <div class="container container--narrow">
-
-
         <nav class="header__nav">
-            <input type="checkbox" id="responsive-menu" />
-            <label for="responsive-menu" class="toggle-menu">
-                <span>Menu</span>
-                <div class="toggle-menu__lines"></div>
-            </label>
-
+            <a href="{% url 'create-project' %}">Add Projects</a>
         </nav>
     </div>
 </header>
