--- a/test_project/projects/templates/projects/project_form.html
+++ b/test_project/projects/templates/projects/project_form.html
@@ -2,13 +2,9 @@
 
 {% block content %}
 
-<form method="POST">
+<form action="" method="POST">
     {% csrf_token %}
-    {% for field in form %}
-        {{ field.label }}
-        {{ field }}
-        <br><br>
-    {% endfor %}
+    {{ form.as_p }}
     <input type="submit">
 </form>
 
