Added Content -  chapter-4.md - Inserting Images || Image Insertion Implemented - Issue displaying Image for individual project

--- a/test_project/projects/templates/projects/single-project.html
+++ b/test_project/projects/templates/projects/single-project.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
+<img src = "{{ project.featured_image }}"/>
 <h2>{{ project.title }}</h2>
 <hr>
 {% for tag in tags %}
