--- a/test_project/templates/navbar.html
+++ b/test_project/templates/navbar.html
@@ -4,6 +4,7 @@
 <header class="header">
     <div class="container container--narrow">
         <nav class="header__nav">
+            <img class="logo" src = "{% static "images/logo.svg" %}"/>
             <a href="{% url 'create-project' %}">Add Projects</a>
         </nav>
     </div>
