--- a/test_project/projects/templates/projects/single-project.html
+++ b/test_project/projects/templates/projects/single-project.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<img src = "{{ project.featured_image }}"/>
+<img src = "{{ project.featured_image.url }}"/>
 <h2>{{ project.title }}</h2>
 <hr>
 {% for tag in tags %}
