--- a/test_project/projects/templates/projects/projects.html
+++ b/test_project/projects/templates/projects/projects.html
@@ -2,26 +2,68 @@
 
 {% block content %}
 
-<h1>Projects</h1>
+    <main class="projects">
+        <section class="hero-section text-center">
+          <div class="container container--narrow">
+            <div class="hero-section__box">
+              <h2>Search for <span>Projects</span></h2>
+            </div>
+    
+            <div class="hero-section__search">
+              <form class="form" action="#" method="get">
+                <div class="form__field">
+                  <label for="formInput#search">Search By Projects </label>
+                  <input class="input input--text" id="formInput#search" type="text" name="text"
+                    placeholder="Search by Project Title" />
+                </div>
+    
+                <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+              </form>
+            </div>
+          </div>
+        </section>
+        <!-- Search Result: DevList -->
+        <section class="projectsList">
+          <div class="container">
+            <div class="grid grid--three">
 
-<ul>
-    <table style="border: 1px solid white;border-collapse: collapse;">
-        <tr>
-            <th>Project Title</th>
-            <th>Date Created</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        {% for project in projects %}
-        <tr>
-            <td><a href={% url 'project' project.id %}>{{ project.title }}</a></td>
-            <td>{{ project.created }}</td>
-            {# In the line above we are saying that this is a link to /project and a specified project id. #}
-            <td><a href="{% url 'update-project' project.id %}">📝</td>
-            <td><a href="{% url 'delete-project' project.id %}">🗑️</td>
-        </tr>
-        {% endfor %}
-    </table>
-</ul>
+            {% for project in projects %}
+              <div class="column">
+                <div class="card project">
+                  <a href={% url 'project' project.id %} class="project">
+                    <img class="project__thumbnail" src="{{ project.featured_image.url }}" alt="project thumbnail" />
+                    <div class="card__body">
+                      <h3 class="project__title"><a href={% url 'project' project.id %}>{{ project.title }}</a></h3>
+                      <p><a class="project__author" href="profile.html">By Dennis Ivanov</a></p>
+                      <p class="project--rating">
+                        <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Postitive
+                        Feedback ({{ project.vote_total }} Vote{{ project.vote_total|pluralize:"s" }})
+                      </p>
+
+                      <p class="project--edit" style="margin-bottom:1rem">
+                        <a href="{% url 'update-project' project.id %}"><button class="btn btn--sub--outline btn--sm" style="margin-right:1rem">Edit</button>
+                        <a href="{% url 'delete-project' project.id %}"><button class="btn btn--main--outline btn--sm" style="margin-right:1rem">Delete</button>
+                      </p>
+                      
+                      <div class="project__tags">
+                        {% for tag in project.tags.all %}
+                        <span class="tag tag--pill tag--main">
+                          <small>{{ tag }}</small>
+                        </span>
+                        {% endfor %}
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              {% endfor %}
+    
+    
+            </div>
+          </div>
+        </section>
+    
+        
+      </main>
 
 {% endblock content %}
