--- a/test_project/templates/navbar.html
+++ b/test_project/templates/navbar.html
@@ -4,7 +4,7 @@
 <header class="header">
     <div class="container container--narrow">
       <a href="{% url 'projects' %}" class="header__logo">
-        <img class="logo" src = "{% static "images/logo.svg" %}"/>
+        <img style={margin-right:'10rem'} class="logo" src = "{% static "images/logo.svg" %}"/>
       </a>
       <nav class="header__nav">
         <input type="checkbox" id="responsive-menu" />
@@ -13,8 +13,8 @@
           <div class="toggle-menu__lines"></div>
         </label>
         <ul class="header__menu">
-          <li class="header__menuItem"><a href="">Developers</a></li>
-          <li class="header__menuItem"><a href="">Projects</a></li>
+          <li class="header__menuItem"><a href="{% url "profiles" %}">Developers</a></li>
+          <li class="header__menuItem"><a href="{% url "projects" %}">Projects</a></li>
           <li class="header__menuItem"><a href="">Inbox</a></li>
           <li class="header__menuItem"><a href="">My Account</a></li>
           <li class="header__menuItem"><a href="" class="btn btn--sub">Login/Sign Up</a></li>
