--- a/test_project/users/templates/users/login_register.html
+++ b/test_project/users/templates/users/login_register.html
@@ -3,12 +3,53 @@
 {% block content %}
 
 
-<form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Enter Username"/>
-    <input type="password" name="password" placeholder="Enter Password"/>
-    <input type="submit" name="login"/>
-</form>
 
+<div class="auth">
+    <div class="card">
+      <div class="auth__header text-center">
+        <a href="/">
+          <img class="logo" src="../../../static/images/icon.svg" alt="icon" />
+        </a>
+        <h3>Account Login</h3>
+        <p>Hello Developer, Welcome Back!</p>
+      </div>
+
+      <form action="{% url 'login' %}" method="POST" class="form auth__form">
+      {% csrf_token %}
+        <!-- Input:Email -->
+        <div class="form__field">
+          <label for="formInput#text">Username: </label>
+          <input
+            class="input input--text"
+            id="formInput#text"
+            type="text"
+            name="username"
+            placeholder="Enter your username..."
+          />
+        </div>
+
+        <!-- Input:Password -->
+        <div class="form__field">
+          <label for="formInput#password">Password: </label>
+          <input
+            class="input input--password"
+            id="formInput#passowrd"
+            type="password"
+            name="password"
+            placeholder="••••••••"
+          />
+        </div>
+        <div class="auth__actions">
+          <input class="btn btn--sub btn--lg" type="submit" value="Login" />
+          <a href="forgetpassword.html">Forget Password?</a>
+        </div>
+      </form>
+      <div class="auth__alternative">
+        <p>Don’t have an Account?</p>
+        <a href="signup.html">Sign Up</a>
+      </div>
+    </div>
+  </div>
+</body>
 
 {% endblock content %}
