--- a/test_project/users/templates/users/skill_form.html
+++ b/test_project/users/templates/users/skill_form.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
-{% load static %}
+
 {% block content %}
 
 
@@ -7,21 +7,25 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <a class="backButton" href="{% url 'account' %}"><i class="fa-solid fa-arrow-left"></i></a>
+            <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
             <br>
 
-            <form class="form" method="POST" action="{% url 'edit-account' %}" enctype="multipart/form-data">
+            <form class="form" method="POST" action="">
                 {% csrf_token %}
+
                 {% for field in form %}
                 <div class="form__field">
-                    <label for="formInput#text">{{field.label}}</label>
+                    <label for="formInput#text"> {{field.label}}</label>
                     {{field}}
                 </div>
                 {% endfor %}
+
                 <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
             </form>
         </div>
     </div>
 </main>
 
-{% endblock content %}
+
+
+{% endblock %}
