Chapter - 11: Pagination | Documented and Implemented | Search and Pagination Sync Issue, under progress

--- a/test_project/users/templates/users/profiles.html
+++ b/test_project/users/templates/users/profiles.html
@@ -58,5 +58,7 @@
         
     </section>
 
+    {% include 'pagination.html' with queryset=profiles custom_range=custom_range %}
+
   </main>
 {% endblock %}
