--- a/test_project/templates/pagination.html
+++ b/test_project/templates/pagination.html
@@ -2,14 +2,21 @@
 <div class="pagination">
     <ul class="container">
     {% if queryset.has_previous %}
-    <li><a href="?page={{queryset.previous_page_number}}" class="btn btn--disabled">&#10094; Prev</a></li>
+    <li><a href="?page={{queryset.previous_page_number}}" class="btn btn--disabled" data-page="{{queryset.previous_page_number}}">&#10094; Prev</a></li>
     {% endif %}
+
     {% for page in range %}
-    <li><a href="?page={{page}}" class="btn page-link">{{ page }}</a></li>
+        {% if page == queryset.number %}
+            <li><a href="?page={{page}}" class="btn page-link btn--sub" data-page="{{page}}">{{ page }}</a></li>
+        {% else %}
+            <li><a href="?page={{page}}" class="btn page-link" data-page="{{page}}">{{ page }}</a></li>
+        {% endif %}
     {% endfor %}
+
     {% if queryset.has_next %}
-    <li><a href="?page={{queryset.next_page_number}}" class="btn btn--disabled">Next &#10095;</a></li>
+    <li><a href="?page={{queryset.next_page_number}}" class="btn btn--disabled" data-page="{{queryset.next_page_number}}">Next &#10095;</a></li>
     {% endif %}
+
     </ul>
 </div>
 {% endif %}
