--- a/test_project/templates/navbar.html
+++ b/test_project/templates/navbar.html
@@ -17,7 +17,7 @@
           <li class="header__menuItem"><a href="{% url "projects" %}">Projects</a></li>
 
           {% if request.user.is_authenticated %}
-          <li class="header__menuItem"><a href="">Inbox</a></li>
+          <li class="header__menuItem"><a href="{% url 'inbox' %}">Inbox</a></li>
           <li class="header__menuItem"><a href="{% url 'account' %}">My Account</a></li>
           <li class="header__menuItem"><a href="{% url 'create-project' %}" class="btn btn--sub">Add Projects</a></li>
           <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub"><i class="fa-regular fa-right-from-bracket"></i> Logout</a></li>
