--- a/test_project/users/templates/users/login_register.html
+++ b/test_project/users/templates/users/login_register.html
@@ -80,8 +80,9 @@
 
             <div class="auth__actions">
                 <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
-
+                <a href="{% url 'reset_password' %}">Forget Password?</a>
             </div>
+
         </form>
 
         <div class="auth__alternative">
